--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                     <form name="form popup" class="popup__form popup__form-input" novalidate>
                         <fieldset class="popup__form-set">
                             <label class="popup__form-field">
-                                <input id='input-title' type="text" minlength="2" maxlength="40" required class="popup__input popup__input_type_title">
+                                <input id='input-title' type="text" minlength="2" maxlength="40" required class="popup__input popup__input_type_title" placeholder="Имя">
                                 <span class="popup__input-error input-title-error"></span>
                             </label>
                             <label class="popup__form-field">
-                                <input id='input-subtitle' type="text" minlength="2" maxlength="200" required class="popup__input popup__input_type_subtitle">
+                                <input id='input-subtitle' type="text" minlength="2" maxlength="200" required class="popup__input popup__input_type_subtitle" placeholder="Вид деятельности">
                                 <span class="popup__input-error input-subtitle-error"></span>
                             </label>
                             <button class='popup__button' type="submit">Сохранить</button>
@@ -103,7 +103,7 @@
             </div>
         </div>
     </template>
-
+    <script src="./scripts/initial-cards.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="./scripts/validate.js"></script>
 </body>
