--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
             </div>
         </div>
     </template>
-    <script src="./scripts/initial-cards.js"></script>
-    <script src="./scripts/validate.js"></script>
-    <script src="./scripts/script.js"></script>
+    <script type="module" src="./scripts/script.js"></script>
 </body>
 
 </html>
