--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./pages/index.css">
+    <!-- <link rel="stylesheet" href="./pages/index.css"> -->
+
 
     <title>Место</title>
 </head>
@@ -13,29 +14,28 @@
 <body class="body">
     <div class="page">
         <header class="header">
-            <img src="./image/Vector1.svg" class='header__logo' alt="шапка лого">
+            <img src="<%=require('../image/Vector1.svg')%>" class='header__logo' alt="шапка лого">
         </header>
-
         <main class="main">
             <section class="profile">
                 <div class="profile__container">
-                    <img src="./image/avatar.jpg" class="profile__avatar" alt="жак ив кусто">
+                    <img src="<%=require('../image/avatar.jpg')%>" class="profile__avatar" alt="жак ив кусто">
                 </div>
                 <div class="profile__info">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
                     <button type="button" class="profile__edit-button"><img class="profile__image-editbutton"
-                            src="./image/EditButton.svg" alt="кнопка редактирования"></button>
+                            src="<%=require('../image/EditButton.svg')%>" alt="кнопка редактирования"></button>
                     <p class="profile__subtitle">Исследователь океана</p>
                 </div>
                 <button type="button" class="profile__add-button"><img class="profile__image-addbutton"
-                        src="./image/Vectorplus.svg" alt="кнопка добавления фотографии"></button>
+                        src="<%=require('../image/Vectorplus.svg')%>" alt="кнопка добавления фотографии"></button>
             </section>
             <section class="elements">
 
             </section>
             <div class="popup popup_type_edit ">
                 <div class="popup__container">
-                    <button type="button" class="popup__button-close"><img src="./image/CloseIcon.svg"
+                    <button type="button" class="popup__button-close"><img src="<%=require('../image/CloseIcon.svg')%>"
                             alt="кнопка закрытия" class="popup__close"></button>
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <form name="form popup" class="popup__form popup__form-input" novalidate>
@@ -59,7 +59,7 @@
 
             <div class="popup popup_type_card">
                 <div class="popup__container">
-                    <button type="button" class="popup__button-close"><img src="./image/CloseIcon.svg"
+                    <button type="button" class="popup__button-close"><img src="<%=require('../image/CloseIcon.svg')%>"
                     alt="кнопка закрытия" class="popup__close popup__close-card"></button>
                     <h3 class="popup__title">Новое место</h3>
                     <form class="popup__form popup__form-card" novalidate>
@@ -103,7 +103,6 @@
             </div>
         </div>
     </template>
-    <script type="module" src="./scripts/script.js"></script>
 </body>
 
 </html>
