--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
 
             <div class="popup popup_type_image">
                 <div class="popup__container-image">
-                    <button type="button" class="popup__close-image"></button>
+                    <button type="button" class="popup__close popup__close-image"></button>
                     <img alt="попап картинка" class="popup__image">
                     <p class="popup__text"></p>
                 </div>
