--- a/src/index.html
+++ b/src/index.html
@@ -41,11 +41,11 @@
                     <form name="form popup" class="popup__form popup__form-input" novalidate>
                         <fieldset class="popup__form-set">
                             <label class="popup__form-field">
-                                <input id='input-title' type="text" minlength="2" maxlength="40" required class="popup__input popup__input_type_title" placeholder="Имя">
+                                <input id='input-title' name="title" type="text" minlength="2" maxlength="40" required class="popup__input popup__input_type_title" placeholder="Имя">
                                 <span class="popup__input-error input-title-error"></span>
                             </label>
                             <label class="popup__form-field">
-                                <input id='input-subtitle' type="text" minlength="2" maxlength="200" required class="popup__input popup__input_type_subtitle" placeholder="Вид деятельности">
+                                <input id='input-subtitle' name="subtitle" type="text" minlength="2" maxlength="200" required class="popup__input popup__input_type_subtitle" placeholder="Вид деятельности">
                                 <span class="popup__input-error input-subtitle-error"></span>
                             </label>
                             <button class='popup__button popup__button_disabled' type="submit">Сохранить</button>
@@ -65,11 +65,11 @@
                     <form class="popup__form popup__form-card" novalidate>
                         <fieldset class="popup__form-set">
                             <label class="popup__form-field">
-                                <input id='input-name' type="text" minlength="2" maxlength="30" required class="popup__input popup__input_type_name" placeholder="Название" />
+                                <input id='input-name' name="title" type="text" minlength="2" maxlength="30" required class="popup__input popup__input_type_name" placeholder="Название" />
                                 <span class="popup__input-error input-name-error"></span>
                             </label>
                             <label class="popup__form-field">
-                                <input id='input-link' type="url" required class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" />
+                                <input id='input-link' name="subtitle" type="url" required class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" />
                                 <span class="popup__input-error input-link-error"></span>
                              </label>
                             <button class='popup__button popup__button_create popup__button_disabled' type="submit">Создать</button>
